[project]
name = "pinch-dubbing"
version = "0.1.0"
description = "Dub and translate audio/video using Pinch AI"
license = { text = "MIT" }
requires-python = ">= 3.9"
dependencies = ["requests>=2.28"]

[project.urls]
Repository = "https://github.com/pinch-eng/comfyui-pinch-voice-translation"

[tool.comfy]
PublisherId = "mythri"
DisplayName = "Pinch Voice Translation"
